# system-analyzer

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-2ce3f2093eb65f49188afb78e6ff5a2c94cb51e1004e35b5f84ada651ea9aebb.json  query-870327288caee878b3d83f9f9ee0fb122cff4c16706028d7e1b4031ec05d4890.json  query-a4a4b83e98d8a0a737ffa396aafa8c6a68541c4926f5b51aaa7653ff1c8c48bf.json  query-f0080f5f248706a4e857d78d4be6f30f12d9e38adc94813ba018b78445641941.json
migrations/: 0001_init_schema.sql  1_init_schema.sql
src/: crawler.rs  dpkg_integration.rs  main.rs
