[package]
name = "system-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
dpkg-query-json = "0.1.12"
clap = { version = "4.5.21", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
